    - Fixed a crash when clicking the ingredient combinator button without any ingredients present
    - Fixed a crash caused by a mod adding trains with a capacity of zero
    - Fixed an issue where pasting a larger amount of modules onto a smaller amount of available slots would not calculate the effects correctly
    - Fixed an issue where exporting ingredients to combinator would leave out items with amounts below 1
    - Fixed that lines with subfloor would not be grayed out as desired when checked off in the compact dialog

---------------------------------------------------------------------------------------------------
Version: 1.1.59
Date: 19. 09. 2022
  Features:
    - Added a button to unfold subfloors, meaning they will be shown on the top level without needing to go down into them
    - Added a preference that, when enabled, adds a subfactory's products as icons to its name in the subfactory list
    - Added the ability to paste whole lines as top level products, setting product amounts and copying the line(s) over
  Changes:
    - Made rounding around machine amounts more consistent
  Bugfixes:
    - Fixed an issue where moving subfactories to the top on subfloors did not work correctly
    - Fixed a crash when changing line percentage via item amount when percentage is 0
    - Fixed an issue where pasting a module could make the total number of modules exceed the allowed amount

---------------------------------------------------------------------------------------------------
Version: 1.1.58
Date: 03. 09. 2022
  Bugfixes:
    - Fixed a bug where some line products would be shown with an amount of -1
    - Fixed a crash when trying to paste a line with subfloor as a top level product
    - Fixed a rare crash when cycling through production views

---------------------------------------------------------------------------------------------------
Version: 1.1.57
Date: 30. 08. 2022
  Changes: